<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorGradientBottom"
    tools:context="._views.note.NoteFragment">

    <include layout="@layout/toolbar"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/separator1View"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <EditText
        android:id="@+id/noteTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:maxLines="1"
        android:textSize="16sp"
        android:background="@drawable/auth_frame"
        android:padding="@dimen/mediumMargin"
        app:layout_constraintTop_toBottomOf="@id/separator1View"/>

    <View
        android:id="@+id/separator2View"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/noteTitleTextView"/>

    <TextView
        android:id="@+id/noteDescriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/description"
        android:padding="@dimen/mediumMargin"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/separator2View"
        app:layout_constraintBottom_toBottomOf="@id/acceptButton"/>

    <Button
        android:id="@+id/acceptButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/mediumMargin"
        android:layout_margin="@dimen/mediumMargin"
        android:text="@string/accept"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryText"
        android:background="@drawable/accept_button"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>