<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context="._views.main.MainActivity"
    android:padding="@dimen/hugeMargin">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_1"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textColor="@color/colorPrimaryText"
        android:textSize="64sp"
        android:fontFamily="@font/orbitron"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/line_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/hugeMargin"
        android:textColor="@color/colorPrimaryText"
        android:fontFamily="@font/orbitron"
        android:text="@string/signUpDescription"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/line_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:background="@drawable/entryframe"
        android:hint="@string/password"
        android:fontFamily="@font/orbitron"
        android:textSize="20sp"
        android:padding="@dimen/mediumMargin"
        android:layout_marginTop="@dimen/mediumMargin"
        app:layout_constraintTop_toBottomOf="@id/descriptionTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/authButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/mediumMargin"
        android:textSize="26sp"
        android:padding="@dimen/mediumMargin"
        android:fontFamily="@font/orbitron"
        android:background="@drawable/acceptbutton"
        android:textColor="@color/colorPrimaryText"
        android:text="@string/signUp"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <by.crispypigeon.secnotes._views._controls.LoadingProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="#FFFFFF"
        android:progressDrawable="@color/colorGradientBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>